--- a/.ci/Dockerfile
+++ b/.ci/Dockerfile
@@ -1,20 +1,15 @@
-FROM ghcr.io/sosiristseng/docker-juliabook:1.7.3.2
-
-ENV LC_ALL C.UTF-8
+FROM python:3.7-slim
 
 WORKDIR /usr/src/app
 
+ENV LANG C.UTF-8
+ENV LC_ALL C.UTF-8
+
+RUN apt-get update && apt-get install -y build-essential git gzip brotli parallel --no-install-recommends && rm -rf /var/lib/apt/lists/*
+
 # Python deps (jupyter-book and matplotlib)
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -U pip wheel setuptools \
+    && pip install --no-cache-dir -r requirements.txt
 
-# Build Julia environment
-COPY Project.toml Manifest.toml build.jl ./
-# COPY src/ src
-RUN julia --threads=auto --color=yes --project=@. -e 'import Pkg; Pkg.instantiate(); Pkg.resolve(); Pkg.precompile()' && julia --threads=auto --color=yes build.jl
-
-# Julia command
-CMD ["julia"]
-
-# If using sysimage
-# CMD ["julia", "-Jsysimage.so"]
+CMD ["jupyter-book"]
