--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: My sample book
+title: Metabolic network
 author: Wen-Wei Tseng
 copyright: "2022" # Copyright year to be placed in the footer
 # logo: logo.png
@@ -10,7 +10,7 @@ exclude_patterns: []
 
 # See https://jupyterbook.org/content/execute.html
 execute:
-  execute_notebooks: "off"
+  execute_notebooks: "cache"
   cache: "" # A path to the jupyter cache that will be used to store execution artifacts. Defaults to `_build/.jupyter_cache/`
   exclude_patterns: [] # A list of patterns to *skip* in execution (e.g. a notebook that takes a really long time)
   timeout: 600 # The maximum time (in seconds) each notebook cell is allowed to run.
@@ -45,8 +45,8 @@ latex:
   use_jupyterbook_latex: true # use sphinx-jupyterbook-latex for pdf builds as default
 
 # Add a bibtex file so that we can create citations
-bibtex_bibfiles:
-  - references.bib
+# bibtex_bibfiles:
+#   - references.bib
 
 #######################################################################################
 # Launch button settings
@@ -59,7 +59,7 @@ launch_buttons:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/sosiristseng/template-juliabook # Online location of your book (GitHub is recommended)
+  url: https://github.com/ntumitolab/mmsb-metanet # Online location of your book (GitHub is recommended)
   path_to_book: docs # Optional path to your book, relative to the repository root
   branch: main # Which branch of the repository should be used when creating links (optional)
 
