--- a/.github/workflows/linkcheck.yml
+++ b/.github/workflows/linkcheck.yml
@@ -1,18 +1,24 @@
 name: Check markdown links
 
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 1 * *" # Every month
+    - cron: '0 0 1 * *' # Every month
+
+env:
+  PYTHON_VER: '3.10'
 
 jobs:
   linkcheck:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Build Jupyter Books
-        run: docker run -v ${{ github.workspace }}:/work ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest jupyter-book build /work/docs --builder linkcheck
+      - name: Setup Python ${{ env.PYTHON_VER }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VER }}
+          cache: 'pip'
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      - name: Check Links
+        run: jupyter-book build docs/ --builder linkcheck
