--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: Build Docker Image and Jupyter Notebooks
+name: Run Jupyter Notebooks
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
