--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,7 +28,9 @@ jobs:
           python-version: ${{ env.PYTHON_VER }}
           cache: 'pip'
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          pip install -U pip wheel setuptools
+          pip install -r requirements.txt
       - name: Run Notebooks
         run: |
           parallel -j2 jupyter nbconvert --to notebook --ExecutePreprocessor.timeout=600 --execute --inplace {} ::: docs/*.ipynb
