--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VER }}
-          cache: 'pip'
+          # cache: 'pip'
       - name: Install dependencies
         run: |
           pip install -U pip wheel setuptools
