--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,7 +33,7 @@ jobs:
           path: _build/.jupyter_cache/
           key: ${{ runner.os }}-py${{ env.PYTHON_VER }}-${{ hashFiles('**/requirements.txt') }}
       - name: Build website
-        run: jupyter-book build docs --keep-going -v
+        run: jupyter-book build docs --keep-going -vvv
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v2
