--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,14 +1,14 @@
-name: Run Jupyter Notebooks
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+name: Build Jupyter Notebooks
 
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 env:
   PYTHON_VER: '3.11'
@@ -17,25 +17,30 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - name: Setup Python ${{ env.PYTHON_VER }}
         uses: actions/setup-python@v4
+        id: python
         with:
           python-version: ${{ env.PYTHON_VER }}
-          # cache: 'pip'
-      - name: Install dependencies
-        run: |
-          pip install --no-cache-dir -r requirements.txt
-      - name: Run Notebooks
-        run: |
-          parallel --joblog /tmp/log -j1 jupyter nbconvert --to notebook --ExecutePreprocessor.timeout=600 --execute --inplace {} ::: docs/*.ipynb
-          cat /tmp/log
+          cache: 'pip'
+      - name: Install Python dependencies
+        run: pip install -r requirements.txt
+      - name: Cache Jupyter Book output
+        uses: actions/cache@v3
+        with:
+          path: docs/_build/.jupyter_cache
+          key: ${{ runner.os }}-jb-${{ hashFiles('**/requirements.txt') }}-${{ hashFiles('**/*.ipynb') }}
+          restore-keys: |
+            ${{ runner.os }}-jb-${{ hashFiles('**/requirements.txt') }}-
       - name: Build website
         run: jupyter-book build docs --keep-going -v
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v2
       - name: Upload page artifact
+        if: github.ref == 'refs/heads/main'
         uses: actions/upload-pages-artifact@v1
         with:
           path: docs/_build/html
