--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,6 +12,7 @@ concurrency:
 
 env:
   PYTHON_VER: '3.11'
+  TIMEOUT: '600'
 
 jobs:
   ci:
@@ -27,15 +28,12 @@ jobs:
           cache: 'pip'
       - name: Install Python dependencies
         run: pip install -r requirements.txt
-      - name: Cache Jupyter Book output
-        uses: actions/cache@v3
-        with:
-          path: docs/_build/.jupyter_cache
-          key: ${{ runner.os }}-jb-${{ hashFiles('**/requirements.txt') }}-${{ hashFiles('**/*.ipynb') }}
-          restore-keys: |
-            ${{ runner.os }}-jb-${{ hashFiles('**/requirements.txt') }}-
+      - name: Run notebooks
+        run: |
+          parallel --joblog /tmp/log -j1 jupyter nbconvert --to notebook --ExecutePreprocessor.timeout=${{ env.TIMEOUT }} --execute --inplace {} ::: docs/*.ipynb
+          cat /tmp/log
       - name: Build website
-        run: jupyter-book build docs --keep-going -v
+        run: jupyter-book build docs/ --keep-going -v
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v2
