--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,7 +34,11 @@ jobs:
           parallel --joblog /tmp/log -j${JOBS} jupyter nbconvert --to notebook --ExecutePreprocessor.timeout=${{ env.TIMEOUT }} --execute --inplace {} ::: docs/*.ipynb
           cat /tmp/log
       - name: Build website
-        run: jupyter-book build docs/ --keep-going -v
+        run: >
+          docker run
+          -v ${{ github.workspace }}:/work
+          ghcr.io/sosiristseng/docker-jupyterbook:0.13
+          jupyter-book build /work/docs/ --keep-going -v
       - name: Upload page artifact
         if: github.ref == 'refs/heads/main'
         uses: actions/upload-pages-artifact@v1
