--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,6 @@ concurrency:
 env:
   PYTHON_VER: '3.11'
   TIMEOUT: '600'
-  JOBS: 1
 
 jobs:
   ci:
@@ -26,19 +25,10 @@ jobs:
         id: python
         with:
           python-version: ${{ env.PYTHON_VER }}
-          cache: 'pip'
       - name: Install Python dependencies
         run: pip install -r requirements.txt
-      - name: Run notebooks
-        run: |
-          parallel --joblog /tmp/log -j${JOBS} jupyter nbconvert --to notebook --ExecutePreprocessor.timeout=${{ env.TIMEOUT }} --execute --inplace {} ::: docs/*.ipynb
-          cat /tmp/log
       - name: Build website
-        run: >
-          docker run
-          -v ${{ github.workspace }}:/work
-          ghcr.io/sosiristseng/docker-jupyterbook:0.13
-          jupyter-book build /work/docs/ --keep-going -v
+        run: jupyter-book build docs/ --keep-going -v
       - name: Upload page artifact
         if: github.ref == 'refs/heads/main'
         uses: actions/upload-pages-artifact@v1
