--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,14 +37,10 @@ jobs:
       - name: Install Python dependencies
         run: pip install -r requirements.txt
         if: steps.cache-virtualenv.outputs.cache-hit != 'true'
-      - name: Run notebooks
-        run: |
-          parallel --joblog /tmp/log -j${JOBS} jupyter nbconvert --to notebook --ExecutePreprocessor.timeout=${{ env.TIMEOUT }} --execute --inplace {} ::: docs/*.ipynb
-          cat /tmp/log
       - name: Build website
         run: jupyter-book build docs/ --keep-going -v
       - name: Upload page artifact
-        if: github.ref == 'refs/heads/main'
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: actions/upload-pages-artifact@v1
         with:
           path: docs/_build/html
@@ -52,7 +48,7 @@ jobs:
   # Deployment job
   deploy:
     needs: ci
-    if: github.ref == 'refs/heads/main'
+    if: ${{ github.ref == 'refs/heads/main' }}
     # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
       pages: write # to deploy to Pages
