--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,8 +12,7 @@ concurrency:
 
 env:
   PYTHON_VER: '3.11'
-  TIMEOUT: '600'
-  JOBS: 1
+  PYDEVD_DISABLE_FILE_VALIDATION: 1
 
 jobs:
   ci:
@@ -21,24 +20,15 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Setup Python ${{ env.PYTHON_VER }}
-        uses: actions/setup-python@v4
-        id: python
+      - name: Setup Python env
+        uses: conda-incubator/setup-miniconda@v2
         with:
           python-version: ${{ env.PYTHON_VER }}
-      - uses: syphar/restore-virtualenv@v1
-        id: cache-virtualenv
-        with:
-          requirement_files: requirements.txt  # this is optional
-      - uses: syphar/restore-pip-download-cache@v1
-        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
-        # the package installation will only be executed when the
-        # requirements-files have changed.
-      - name: Install Python dependencies
-        run: pip install -r requirements.txt
-        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
+          miniforge-variant: Mambaforge
+          environment-file: environment.yml
       - name: Build website
-        run: jupyter-book build docs/ --keep-going -v
+        shell: bash -el {0}
+        run: jupyter-book build docs/ --keep-going
       - name: Upload page artifact
         if: ${{ github.ref == 'refs/heads/main' }}
         uses: actions/upload-pages-artifact@v1
